Layout fixes for some pages on IE, minimized Pure for production.

--- a/src/static/less/eus-smallpage.less
+++ b/src/static/less/eus-smallpage.less
@@ -4,6 +4,10 @@ html.subpage-html {
     height: 100%;
 }
 
+@media all and (-ms-high-contrast:none) {
+    body.subpage-body { height: 100%; }
+}
+
 body.subpage-body {
 	display: -webkit-flex;
 	display: flex;
@@ -18,7 +22,6 @@ body.subpage-body {
 	margin: 0;
 	padding: 0;
 	min-height: 100%;
-	height: 100%;
 
 	.subpage-container {
         position: relative;
