--- a/src/static/less/lighter.less
+++ b/src/static/less/lighter.less
@@ -1,8 +1,12 @@
 
 @import "eus-define.less";
 
+@media all and (-ms-high-contrast:none) {
+    body { height: 100%; }
+}
+
 html.lighter-html {
-	height: 100%;
+    height: 100%;
     font-size: 14px;
 }
 
@@ -11,7 +15,6 @@ body {
 	margin: 0;
 	padding: 0;
 	min-height: 100%;
-	// height: 100%;
 	position: relative;
 	
 	display: -webkit-flex;
